@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.860 2012/02/22 10:44:59 fhajny Exp $
+# $NetBSD: Makefile,v 1.861 2012/02/28 21:02:57 minskim Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -345,6 +345,7 @@ SUBDIR+=	p5-FCGI-ProcManager
 SUBDIR+=	p5-HTML-Clean
 SUBDIR+=	p5-HTML-Element-Extended
 SUBDIR+=	p5-HTML-Email-Obfuscate
+SUBDIR+=	p5-HTML-Entities-Interpolate
 SUBDIR+=	p5-HTML-FillInForm
 SUBDIR+=	p5-HTML-FixEntities
 SUBDIR+=	p5-HTML-Form
